# kalshi-afterhours-bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: strategy.example.yaml  strategy.test.yaml  strategy.yaml
scratch/: inspect_pykalshi.py  inspect_runtime_objects.py  test_adapter_live.py  test_engine_overnight_cycle.py  test_event_decision_dry_run.py  test_executor_dry_run.py  test_reconciliation_planner.py  test_strategy_logic.py
src/kalshi_afterhours_bot/: __init__.py  adapters.py  config.py  engine.py  executor.py  inventory.py  logging_utils.py  main.py  market_data.py  models.py  reconcile.py  reference.py  scheduler.py  state_store.py
src/kalshi_afterhours_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
