[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-afterhours-bot"
version = "0.1.0"
description = "GitHub-ready starter scaffold for a Kalshi after-hours market-making shadow bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
kalshi = [
    "pykalshi[dataframe]",
]

dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
kalshi-afterhours-bot = "kalshi_afterhours_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
